[package]
name = "tagesschau_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
serde = { version = "1.0.171", features = ["derive"] }
time = { version = "0.3.26", features = ["local-offset", "formatting", "macros"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
url = "2.5.0"
