[package]
name = "tagesschau"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "This crate provides an easy to use wrapper for german news provider Tagesschau"
repository = "https://github.com/RedCommander735/Tagesschau.rs"
homepage = "https://github.com/RedCommander735"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
serde = { version = "1.0.171", features = ["derive"] }
time = { version = "0.3.26", features = ["local-offset", "formatting", "macros", "serde", "parsing"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
url = "2.5.0"
