[package]
name = "tagesschau"
version = "0.2.6"
edition = "2021"
license = "MIT"
description = "A client library for interacting with the Tagesschau's `/api2/news` endpoint."
repository = "https://github.com/RedCommander735/Tagesschau.rs"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["tagesschau", "news", "ard", "zdf", "async"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
serde = { version = "1.0.171", features = ["derive"] }
time = { version = "0.3.26", features = ["local-offset", "formatting", "macros", "serde", "parsing"] }
serde_json = "1.0.105"
thiserror = "1.0.47"
url = "2.5.0"


[features]
blocking = ["reqwest/blocking"]


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]